[tool.poetry]
name = "inbrief"
version = "0.1.0"
description = "summarizing long EIAs using generative AI."
authors = ["dhpitt <david.h.pitt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
pypdf = "^3.9.0"
textract = "^1.6.5"
celery = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
